@@ -13,6 +13,7 @@
  - fixed bug in calendar page (goffy)
  - added check for dates from/to (goffy)
  - fixed multiple primary mail accounts (goffy)
+ - keep filter cats when editing event (goffy)
 
 ==============================================================
 1.0.4 RC1 [2022/08/29]
